add author, clear button

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
+  
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css"> -->
     <title>5002 PowerBall Generator</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -19,15 +24,21 @@
           <textarea
             readonly
             id="password"
-            placeholder="Your Secure PowerBall"
+            placeholder="PowerBall Numbers"
             aria-label="Generated PowerBall"
           ></textarea>
         </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate PowerBall</button>
+          <p>
+            PowelBall Draw <span 
+            id="display">0</span> Times
+        </p>
+          <button id="clear" class="btn">Clear Times</button>
         </div>
       </div>
-    </div>
     <script src="powerball.js"></script>
   </body>
 </html>
+
+<div class="author">Made with ❤️ by Tianchou Gong</div>
