--- a/index.html
+++ b/index.html
@@ -41,4 +41,4 @@
   </body>
 </html>
 
-<div class="author">Made with ❤️ by Tianchou Gong</div>
+<div class="author">Made with ❤️ by 5002-PowerBall Group</div>
